RESOLVED FIXED219827
Scroll performance logging: rubberbanding should not trigger "Exposed tileless area" logging
https://bugs.webkit.org/show_bug.cgi?id=219827
Summary Scroll performance logging: rubberbanding should not trigger "Exposed tileles...
Simon Fraser (smfr)
Reported 2020-12-12 10:54:43 PST
Scroll performance logging: rubberbanding should not trigger "Exposed tileless area" logging
Attachments
Patch (2.07 KB, patch)
2020-12-12 10:55 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-12-12 10:55:45 PST
Simon Fraser (smfr)
Comment 2 2020-12-12 10:55:47 PST
EWS
Comment 3 2020-12-12 11:29:28 PST
Committed r270737: <https://trac.webkit.org/changeset/270737> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416100 [details].
Note You need to log in before you can comment on or make changes to this bug.