Scroll performance logging: rubberbanding should not trigger "Exposed tileless area" logging https://bugs.webkit.org/show_bug.cgi?id=219827 <rdar://problem/72209189>

Reviewed by Zalan Bujtas.

Clamp the scroll position before computing exposed tile-less area so that rubberbanding
doesn't trigger logging that we revealed areas not covered by tiles.

* page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.mm:
(WebCore::ScrollingTreeFrameScrollingNodeMac::exposedUnfilledArea const):


Canonical link: https://commits.webkit.org/232400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270737 268f45cc-cd09-0410-ab3c-d52691b4dbfc